<resources>
    <string name="app_name">Movies</string>
    <string name="btn1Name">btn1</string>
    <string name="btn2Name">btn2</string>
    <string name="azaza">lol kek azaza</string>
    <string name="genres">Genres: </string>
    <string name="directors">Directors:</string>
    <string name="cast">Cast:</string>
    <string name="release_date">Release date:</string>
    <string name="description">Description:</string>
</resources>